--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,12 @@ elixir:
   - 1.3.3
 otp_release:
   - 19.0
-sudo: false
-before_install: cd rplugin/elixir/apps/ilexir
+sudo: required
+before_install:
+  - sudo add-apt-repository ppa:neovim-ppa/unstable -y
+  - sudo apt-get update -q
+  - sudo apt-get install neovim
+  - cd rplugin/elixir/apps/ilexir
 script:
   - mix espec
 notifications:
